# linux_rollback

./: BUGFIXES_SUMMARY.md  BUGFIX_CHANGE_COUNT.md  BUGFIX_SIZE_AND_CLASSIFICATION.md  BUG_FIX_COMPLETE.md  DISK_SPACE_BUG_ANALYSIS.md  EXPORT_SNAPSHOT_FIX.md  Explain.md  FINAL_BUGFIXES_COMPLETE.md  KCST Form Answer  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_ANALYSIS.md  README.md  SESSION_COMPLETE_SUMMARY.md  SIZE_AND_EXPORT_FIXES_COMPLETE.md  SIZE_AND_EXPORT_FIX_PLAN.md  SNAPSHOT_CHANGES_COMPLETE.md  SNAPSHOT_CHANGES_FEATURE_PLAN.md  SNAPSHOT_CHANGES_PHASE1_COMPLETE.md  SNAPSHOT_SIZE_EXPORT_COMPLETE.md  SNAPSHOT_SIZE_EXPORT_PLAN.md  SNAPSHOT_SIZE_OPTIMIZATION.md  TEST_README.md  TEST_SCRIPTS_SUMMARY.md  USER_CONFIG_BACKUP_PLAN.md  USER_CONFIG_FEATURE_COMPLETE.md  cleanup-test-snapshots.sh  fix-snapshot-sizes.sh  quick-test.sh  test-snapshot-changes.sh  verify-change-count.sh
timeshift/: meson.build
timeshift/docs/man/: meson.build
timeshift/src/: AppConsole.vala  AppGtk.vala  linuxrollback-launcher  linuxrollback.desktop  meson.build
timeshift/src/Core/: ChangesSummary.vala  Main.vala  Snapshot.vala
timeshift/src/Gtk/: ChangesDetailsWindow.vala  MainWindow.vala  SnapshotListBox.vala  UsersBox.vala
